[package]
name = "krysta-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
genpdf = "0.2"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
walkdir = "2.5"
colored = "2.1"
comfy-table = "7.1"
indicatif = "0.17"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }